--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,2 +1,11 @@
-<h1>Menu</h1>
-<span>{{texto}}</span>
+<div>
+  <a [routerLink]="['/home']" routerLinkActive="router-link-active">Home</a>
+</div>
+<div>
+  <a [routerLink]="['/footer']" routerLinkActive="router-link-active">Footer</a>
+</div>
+<div>
+  <a [routerLink]="['/usuario']" routerLinkActive="router-link-active">Usuario</a>
+</div>
+
+<span>teste menu</span>
