--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,1 +1,18 @@
 <h1>Usuario</h1>
+<div>
+  <h1>
+  </h1>Nome:
+</div>
+
+<div>
+  <span>{{usuario.nome}}</span>
+</div>
+
+<div>
+  <h1>
+  </h1>Email:
+</div>
+
+<div>
+  <span>{{usuario.email}}</span>
+</div>
